--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "electron-store": "6.0.1",
     "fs-extra": "10.0.0",
     "lodash.throttle": "4.1.1",
+    "needle": "^3.1.0",
     "s-ago": "2.2.0",
     "sort-on": "4.1.1",
     "sweetalert2": "11.3.10",
